Fix nav style issues on safari

--- a/src/app/components/navigation/navigation.component.scss
+++ b/src/app/components/navigation/navigation.component.scss
@@ -32,3 +32,6 @@
     }
   }
 }
+span.mat-button-wrapper {
+  margin: auto;
+}
